Make styling consistent between views

--- a/app/src/pages/home/home.html
+++ b/app/src/pages/home/home.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content class="home" padding>
+<ion-content class="home">
   <ion-card *ngFor="let item of weather">
     <ion-card-header>{{ item.dateFormatted }}</ion-card-header>
     <ion-list>
