--- a/app/src/pages/settings/settings.html
+++ b/app/src/pages/settings/settings.html
@@ -5,8 +5,10 @@
 </ion-header>
 
 
-<ion-content padding>
-  <ion-list>
-    <ion-item>No settings yet!</ion-item>
-  </ion-list>
+<ion-content>
+  <ion-card>
+    <ion-list>
+      <ion-item>No settings yet!</ion-item>
+    </ion-list>
+  </ion-card>
 </ion-content>
