--- a/app/src/pages/home/home.html
+++ b/app/src/pages/home/home.html
@@ -1,60 +1,80 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Hello {{ user ? user.name : '' }}</ion-title>
     <ion-buttons end>
-      <button ion-button (click)="clear()">Clear</button>
+      <button ion-button (click)="clear()">Sign Out</button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content class="home">
+<ion-content class="home" padding>
 
-  <ion-card *ngFor="let split of splits | async">
-    <ion-list>
-      <ion-item-sliding>
-        <ion-item>
-          <strong>{{ split.payer }}</strong> paid for <strong>{{ split.title }}</strong> for <strong>{{ split.cost
-          }}</strong>
-          <p>Split evently between {{ split.participants }} and {{ split.payer }}</p>
-        </ion-item>
-        <ion-item-options side="right">
-          <button ion-button color="danger" (tap)="removeSplit(split)">
-            <ion-icon name="trash"></ion-icon>
-            Kill
-          </button>
-        </ion-item-options>
-      </ion-item-sliding>
-    </ion-list>
-  </ion-card>
+  <ion-list>
+    <ion-list-header>Splits</ion-list-header>
 
-  <ion-card>
-    <form name="newSplitForm">
-      <ion-list>
-        <ion-item>
-          <ion-label fixed>Paid?</ion-label>
-          <ion-input name="payer" type="text" [(ngModel)]="newSplit.payer"></ion-input>
-        </ion-item>
+    <ion-item *ngIf="hasGroups === undefined" class="align-center">
+      <ion-spinner></ion-spinner>
+    </ion-item>
 
-        <ion-item>
-          <ion-label fixed>What?</ion-label>
-          <ion-input name="title" type="text" [(ngModel)]="newSplit.title"></ion-input>
-        </ion-item>
+    <ion-item *ngIf="hasGroups === false">
+      <div>No splits yet, add one below!</div>
+    </ion-item>
 
-        <ion-item>
-          <ion-label fixed>Who?</ion-label>
-          <ion-input name="participants" type="text" [(ngModel)]="newSplit.participants"></ion-input>
-        </ion-item>
+    <ion-item item-icon-right *ngFor="let split of splits | async">
+      <div flex-start>{{ split.title }}</div>
+      <ion-note flex-end>{{ split.participants.length }} members</ion-note>
+      <ion-icon name="arrow-forward" item-end></ion-icon>
+    </ion-item>
+  </ion-list>
 
-        <ion-item>
-          <ion-label fixed>Cost?</ion-label>
-          <ion-input name="cost" type="text" [(ngModel)]="newSplit.cost"></ion-input>
-        </ion-item>
-      </ion-list>
-    </form>
-  </ion-card>
+  <button ion-button block color="light" (click)="createNewSplit()">Create new Split</button>
 
-  <ion-card>
-    <button ion-button no-margin full color="light" (click)="addSplit()">Add New Split</button>
-  </ion-card>
+  <!--<ion-card *ngFor="let split of splits | async">-->
+  <!--<ion-list>-->
+  <!--<ion-item-sliding>-->
+  <!--<ion-item>-->
+  <!--<strong>{{ split.payer }}</strong> paid for <strong>{{ split.title }}</strong> for <strong>{{ split.cost-->
+  <!--}}</strong>-->
+  <!--<p>Split evently between {{ split.participants }} and {{ split.payer }}</p>-->
+  <!--</ion-item>-->
+  <!--<ion-item-options side="right">-->
+  <!--<button ion-button color="danger" (tap)="removeSplit(split)">-->
+  <!--<ion-icon name="trash"></ion-icon>-->
+  <!--Kill-->
+  <!--</button>-->
+  <!--</ion-item-options>-->
+  <!--</ion-item-sliding>-->
+  <!--</ion-list>-->
+  <!--</ion-card>-->
+
+  <!--<ion-card>-->
+  <!--<form name="newSplitForm">-->
+  <!--<ion-list>-->
+  <!--<ion-item>-->
+  <!--<ion-label fixed>Paid?</ion-label>-->
+  <!--<ion-input name="payer" type="text" [(ngModel)]="newSplit.payer"></ion-input>-->
+  <!--</ion-item>-->
+
+  <!--<ion-item>-->
+  <!--<ion-label fixed>What?</ion-label>-->
+  <!--<ion-input name="title" type="text" [(ngModel)]="newSplit.title"></ion-input>-->
+  <!--</ion-item>-->
+
+  <!--<ion-item>-->
+  <!--<ion-label fixed>Who?</ion-label>-->
+  <!--<ion-input name="participants" type="text" [(ngModel)]="newSplit.participants"></ion-input>-->
+  <!--</ion-item>-->
+
+  <!--<ion-item>-->
+  <!--<ion-label fixed>Cost?</ion-label>-->
+  <!--<ion-input name="cost" type="text" [(ngModel)]="newSplit.cost"></ion-input>-->
+  <!--</ion-item>-->
+  <!--</ion-list>-->
+  <!--</form>-->
+  <!--</ion-card>-->
+
+  <!--<ion-card>-->
+  <!--<button ion-button no-margin full color="light" (click)="addSplit()">Add New Split</button>-->
+  <!--</ion-card>-->
 
 </ion-content>
