--- a/app/src/pages/split-dashboard/split-dashboard.html
+++ b/app/src/pages/split-dashboard/split-dashboard.html
@@ -1,12 +1,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Split Name</ion-title>
+    <ion-title> {{ (split | async)?.title }}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  {{ id }}
+
 </ion-content>
